fix: services section mobile

--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,7 @@
 }
 
 html, body {
+  width: 100%;
   height: 100%;
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
@@ -24,6 +25,7 @@ body {
 
 img, svg {
   max-width: 100%;
+  height: auto;
 }
 
 a {
